stylesheet.css
h1 {
    font-size: 2.5em;
    text-align: center;
    margin: 10px 0 5px 0;
}

a {
    color: #ecf0f1;
    text-decoration: none;
}

ul {
    list-style-type: none;
    padding: 5px 25px 5px 40px;
}

body {
    width: 90%;
    margin: auto;
    margin-top: 10px;
    margin-bottom: 50px;
}

.title {
    font-size: 4em;
    text-align: center;
    margin: 10px 0 10px 0;
}

.titledescription {
    font-size: 1.5em;
    text-align: center;
    margin: 5px 0 5px 0;

}

.general {
    background-color: #34495e;
    color: #ecf0f1;
    font-size: 1em;
    font-family: 'Roboto', sans-serif;
}

.generalblock {
    background-color: #2c3e50;
    box-shadow: 8px 8px 10px rgba(0, 0, 0, .4);
    vertical-align: top;
}

.halfblock {
    min-height: 230px;
    text-align: left;
    font-size: 1.25em;
    width: 49%;
    top: 10px;
}

.logolink {
    width: 90%;
}

#header {
    width: 90%;
    margin-top: 15px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
    border: 0px 0px 0px 0px;
    padding: 5px 0px 15px 0px;
}

#headshot {
    width: 100%;
    vertical-align: top;
}

#pic {
    text-align: center;
    width: 250px;
    margin: auto;
    border: 15px solid #2c3e50;
    box-shadow: 8px 8px 10px rgba(0, 0, 0, .4)
}

#outerblock {
    display: block;
    margin: auto;
    margin-top: 20px;
    width: 90%;
    text-align: center;
    overflow: auto;
    padding: 0 20px 20px 20px;
}

#leftblock {
    float: left;
}

#rightblock {
    float: right;
}

#resume {
    background-color: #1b2631;
    display: block;
    margin: auto;
    margin-top: 10px;
    width: 30%;
    padding: 5px 3px 5px 3px;
    text-align: center;
}

#logolinks {
    display: block;
    margin: auto;
    text-align: center;
    vertical-align: middle;
}

#gitlogo {
    display: inline-block;
    margin: 20px 20px 0 20px;
    width: 20%;
    position: relative;
}

#linkedinlogo {
    display: inline-block;
    margin: 20px 20px 0 20px;
    width: 20%;
    position: relative;
}

#resumelogo {
    display:inline-block;
    margin: 20px 20px 0 20px;
    width: 20%;
    position: relative;
}

#copyright {
    display: block;
    font-size: .75em;
    text-align: center;
    margin: auto;
    position: relative;
    top: 27px
}

